[package]
name = "tantivy-tokenizers"
version = "0.1.0"
edition = "2021"
authors = ["Kapiche <dev@kapiche.com>"]
description = "Custom tokenizers and filters for Tantivy, used by Kapiche"
repository = "https://github.com/Kapiche/tantivy-tokenizers"
license = "MIT"

[dependencies]
tantivy = "0.22"
unicode-properties = "0.1"

[dev-dependencies]
